# copperleaf

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs
crates/backend-kicad/: Cargo.toml
crates/backend-kicad/src/: common.rs  fp_emitter.rs  fp_geom.rs  fp_parser.rs  lib.rs  lib_emitter.rs  netlist.rs  pcb.rs  project.rs  schematic.rs  sexpr.rs  sym_emitter.rs  sym_layout.rs  sym_parser.rs
crates/backend-kicad/tests/: determinism.rs  golden_board.rs  integration.rs
crates/backend-kicad/tests/golden/board/connectors/: golden.kicad_pcb  golden.kicad_sch  golden.net
crates/backend-kicad/tests/golden/board/microchip/: golden.kicad_pcb  golden.kicad_sch  golden.net
crates/backend-kicad/tests/golden/board/morsemicro/: golden.kicad_pcb  golden.kicad_sch  golden.net
crates/backend-kicad/tests/golden/board/passives/: golden.kicad_pcb  golden.kicad_pro  golden.kicad_sch  golden.net
crates/backend-kicad/tests/golden/board/raspberrypi/: golden.kicad_pcb  golden.kicad_sch  golden.net
crates/backend-kicad/tests/golden/board/texas-instruments/: golden.kicad_pcb  golden.kicad_sch  golden.net
crates/backend-kicad/tests/golden/board/wiznet/: golden.kicad_pcb  golden.kicad_sch  golden.net
crates/backends/kicad/: Cargo.toml
crates/backends/kicad/src/: common.rs  lib.rs  netlist.rs  pcb.rs  project.rs  schematic.rs  sexpr.rs  sym_parser.rs
crates/backends/kicad/tests/: symbol_integration.rs
crates/backends/kicad/tests/fixtures/: rp2354a.kicad_sym
crates/cli/: Cargo.toml
crates/cli/src/: generate.rs  kindmap.rs  llm.rs  main.rs  manifest.rs  new.rs  update.rs  vendor.rs
crates/cli/tests/: cli.rs  golden_generate.rs  integration.rs
crates/cli/tests/golden/generate/connectors/: arjm11d7_502_ab_ew2.kicad_mod  arjm11d7_502_ab_ew2.kicad_sym  bh123a.kicad_mod  bh123a.kicad_sym  con_sma_edge_s.kicad_mod  con_sma_edge_s.kicad_sym  conmhf4_smd_g_t.kicad_mod  conmhf4_smd_g_t.kicad_sym  s2b_ph_sm4_tb_lf__sn_.kicad_mod  s2b_ph_sm4_tb_lf__sn_.kicad_sym  usb_c_2340901_1.kicad_mod  usb_c_2340901_1.kicad_sym
crates/cli/tests/golden/generate/microchip/: mcp73831t_2ati_ot.kicad_mod  mcp73831t_2ati_ot.kicad_sym
crates/cli/tests/golden/generate/morsemicro/: mm8108_mf15457.kicad_mod  mm8108_mf15457.kicad_sym
crates/cli/tests/golden/generate/passives/: b82472p6152m000.kicad_mod  b82472p6152m000.kicad_sym  b82472p6222m000.kicad_mod  b82472p6222m000.kicad_sym
crates/cli/tests/golden/generate/raspberrypi/: rp2354a.kicad_mod  rp2354a.kicad_sym
crates/cli/tests/golden/generate/texas-instruments/: tps63031dskr.kicad_mod  tps63031dskr.kicad_sym
crates/cli/tests/golden/generate/wiznet/: w5500.kicad_mod  w5500.kicad_sym
crates/compile/: Cargo.toml
crates/compile/src/: lib.rs
crates/copperleaf/: Cargo.toml
crates/copperleaf/examples/: basic.rs  hello.rs
crates/copperleaf/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: board.rs  compile.rs  erc.rs  helpers.rs  lib.rs  net.rs  pin.rs  stackup.rs  units.rs  util.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/edsl/: Cargo.toml  RP2040.kicad_sym
crates/edsl/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/ir/tests/: json_snapshot.rs
crates/model/: Cargo.toml
crates/model/src/: board.rs  compile.rs  compiled.rs  erc.rs  lib.rs  net.rs  pin.rs  synthesis.rs  units.rs  util.rs
crates/part-codegen/: Cargo.toml  component.mustache
crates/part-codegen/src/: lib.rs  main.rs
crates/part-codegen/tests/: golden_render.rs
crates/part-codegen/tests/golden/render/connectors/: arjm11d7_502_ab_ew2.rs  bh123a.rs  con_sma_edge_s.rs  conmhf4_smd_g_t.rs  s2b_ph_sm4_tb_lf__sn_.rs  usb_c_2340901_1.rs
crates/part-codegen/tests/golden/render/microchip/: mcp73831t_2ati_ot.rs
crates/part-codegen/tests/golden/render/morsemicro/: mm8108_mf15457.rs
crates/part-codegen/tests/golden/render/passives/: b82472p6152m000.rs  b82472p6222m000.rs
crates/part-codegen/tests/golden/render/raspberrypi/: rp2354a.rs
crates/part-codegen/tests/golden/render/texas-instruments/: tps63031dskr.rs
crates/part-codegen/tests/golden/render/wiznet/: w5500.rs
crates/part-macro/: Cargo.toml
crates/part-macro/src/: lib.rs
crates/parts/: Cargo.toml
crates/parts/src/: lib.rs
examples/: basic.rs
openspec/changes/2026-07-07-kicad-symbol-integration/: tasks.md
openspec/changes/analysis-stdlib/: tasks.md
openspec/changes/cli-ingest-external-designs/: design.md  tasks.md
openspec/changes/core-redesign/: tasks.md
openspec/changes/create-copperleaf-cli/: design.md  tasks.md
openspec/changes/edsl-ergonomics/: tasks.md
openspec/changes/layout-solving/: design.md  proposal.md  tasks.md
openspec/changes/rationalise-codebase/: design.md  tasks.md
openspec/changes/serialize-ir-connectivity/: tasks.md
openspec/specs/board-compile-pipeline/: spec.md
openspec/specs/cli-external-design/: spec.md
openspec/specs/code-only-components/: spec.md
openspec/specs/compile-report/: spec.md
openspec/specs/component-metadata/: spec.md
openspec/specs/deterministic-ids/: spec.md
openspec/specs/erc-and-synthesis/: spec.md
openspec/specs/erc-stdlib/: spec.md
openspec/specs/footprint-parser/: spec.md
openspec/specs/inferred-nets/: spec.md
openspec/specs/ir-connectivity/: spec.md
openspec/specs/kicad-backend/: spec.md
parts/: build_helper.rs
parts/connectors/: Cargo.toml  arjm11d7_502_ab_ew2.toml  bh123a.toml  build.rs  con_sma_edge_s.toml  conmhf4_smd_g_t.toml  connector.rs  jst_ph.rs  jst_ph.toml  lib.rs  s2b_ph_sm4_tb_lf__sn_.toml  usb_c_2340901_1.toml
parts/microchip/: Cargo.toml  build.rs  lib.rs  mcp73831t_2ati_ot.toml
parts/morsemicro/: Cargo.toml  build.rs  lib.rs  mm8108_mf15457.toml
parts/passives/: Cargo.toml  b82472p6152m000.toml  b82472p6222m000.toml  footprint.rs  lib.rs
parts/raspberrypi/: Cargo.toml  lib.rs  rp2354a.toml
parts/texas-instruments/: Cargo.toml  build.rs  lib.rs  tps63031dskr.toml
parts/wiznet/: Cargo.toml  lib.rs  w5500.toml
src/: lib.rs
(+71 files in other folders)
