[workspace]
resolver = "2"
members = [
  "crates/backend-kicad",
  "crates/cli",
  "crates/compile",
  "crates/core",
  "crates/part-codegen",
  "crates/part-macro",
  "parts/connectors",
  "parts/microchip",
  "parts/morsemicro",
  "parts/passives",
  "parts/raspberrypi",
  "parts/texas-instruments",
  "parts/wiznet"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
clap = { version = "4.6", default-features = false }
copperleaf = { path = "crates/core", default-features = false }
copperleaf-backend-kicad = {
  path = "crates/backend-kicad",
  default-features = false
}
copperleaf-compile = { path = "crates/compile", default-features = false }
copperleaf-part-codegen = {
  path = "crates/part-codegen",
  default-features = false
}
copperleaf-part-macro = { path = "crates/part-macro", default-features = false }
mustache2 = { version = "1.0", default-features = false }
pdf-extract = { version = "0.12", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
tempfile = { version = "3.27", default-features = false }
thiserror = { version = "2.0" }
toml = { version = "1.1", default-features = false }
uom = { version = "0.38", default-features = false }
