[package]
name = "copperleaf-analysis"
version.workspace = true
edition.workspace = true
description = "Analysis passes: ERC and stubs"
license.workspace = true

[dependencies]
copperleaf-core.workspace = true
copperleaf-ir.workspace = true
serde = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
copperleaf-parts = { workspace = true }
