[package]
name = "copperleaf-backend-kicad"
version.workspace = true
edition.workspace = true
description = "KiCad backend emitters"
license.workspace = true

[dependencies]
copperleaf.workspace = true
copperleaf-part-codegen.workspace = true
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
