[package]
name = "copperleaf-backend-kicad"
version.workspace = true
edition.workspace = true
description = "KiCad backend emitters"
license.workspace = true

[dependencies]
base64.workspace = true
copperleaf.workspace = true
copperleaf-compile.workspace = true
copperleaf-part-codegen.workspace = true
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true

[dev-dependencies]
copperleaf-parts-connectors.path = "../../parts/connectors"
copperleaf-parts-microchip.path = "../../parts/microchip"
copperleaf-parts-morsemicro.path = "../../parts/morsemicro"
copperleaf-parts-passives.path = "../../parts/passives"
copperleaf-parts-raspberrypi.path = "../../parts/raspberrypi"
copperleaf-parts-texas-instruments.path = "../../parts/texas-instruments"
copperleaf-parts-wiznet.path = "../../parts/wiznet"
tempfile.workspace = true
