[package]
name = "copperleaf-cli"
version.workspace = true
edition.workspace = true
description = "CLI for verify/export (minimal, no external deps)"
license.workspace = true

[[bin]]
name = "cl"
path = "src/main.rs"

[dependencies]
copperleaf.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
