[package]
name = "copperleaf-cli"
version.workspace = true
edition.workspace = true
description = "Parts-creation CLI for Copperleaf"
license.workspace = true

[[bin]]
name = "cl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = {
  workspace = true,
  features = ["derive", "error-context", "help", "std", "suggestions", "usage"]
}
copperleaf.workspace = true
copperleaf-backend-kicad.workspace = true
copperleaf-part-codegen.workspace = true
pdf-extract.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml = { workspace = true, features = ["display", "parse", "serde"] }

[dev-dependencies]
tempfile.workspace = true
