[package]
name = "copperleaf"
version.workspace = true
edition.workspace = true
description = "Unified public API re-exporting subcrates"
license.workspace = true

[dependencies]
copperleaf-analysis = { path = "../analysis" }
copperleaf-backend-kicad = { path = "../backends/kicad" }
copperleaf-core = { path = "../core" }
copperleaf-edsl = { path = "../edsl" }
copperleaf-ir = { path = "../ir" }
copperleaf-parts = { path = "../parts" }
