[package]
name = "copperleaf-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for the Copperleaf EDSL"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["derive"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
