[package]
name = "copperleaf-edsl"
version.workspace = true
edition.workspace = true
description = "EDSL builders and macro stubs"
license.workspace = true

[dependencies]
copperleaf-core.workspace = true
copperleaf-ir.workspace = true
copperleaf-parts = { workspace = true, optional = true }

[features]
parts = ["dep:copperleaf-parts"]
