[package]
name = "copperleaf-ir"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "IR: components, pins, nets, constraints, design"

[dependencies]
copperleaf-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
petgraph = "0.6"

[dev-dependencies]
serde_json = "1"
