[package]
name = "copperleaf-ir"
version.workspace = true
edition.workspace = true
description = "IR: components, pins, nets, constraints, design"
license.workspace = true

[dependencies]
copperleaf-core.workspace = true
petgraph.workspace = true
serde = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
