[package]
name = "copperleaf-model"
version.workspace = true
edition.workspace = true
description = "Domain model for electronics components"
license.workspace = true

[dependencies]
petgraph.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uom = { workspace = true, features = ["f64", "si"] }
