[package]
name = "copperleaf-part-macro"
version.workspace = true
edition.workspace = true
description = "Proc-macro entry point for the Copperleaf component generator"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
copperleaf-part-codegen.workspace = true
proc-macro2 = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["parsing", "proc-macro"] }
