[package]
name = "copperleaf-parts-connectors"
version.workspace = true
edition.workspace = true
description = "Connector components"
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
copperleaf.workspace = true
copperleaf-part-macro.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
toml = { workspace = true, features = ["parse", "serde"] }
