[package]
name = "copperleaf-parts-morsemicro"
version.workspace = true
edition.workspace = true
description = "Morse Micro vendor components"
license.workspace = true

[package.metadata.cargo-shear]
ignored = ["copperleaf"]

[lib]
path = "lib.rs"

[dependencies]
copperleaf.workspace = true
copperleaf-part-macro.workspace = true
