[package]
name = "copperleaf-parts-raspberrypi"
version.workspace = true
edition.workspace = true
description = "Raspberry Pi vendor components"
license.workspace = true

[package.metadata.cargo-shear]
ignored = ["copperleaf"]

[lib]
path = "lib.rs"

[dependencies]
copperleaf.workspace = true
copperleaf-part-macro.workspace = true
