[package]
name = "copperleaf-parts-texas-instruments"
version.workspace = true
edition.workspace = true
description = "texas-instruments vendor components"
license.workspace = true

[package.metadata.cargo-shear]
ignored = ["copperleaf"]

[lib]
path = "lib.rs"

[dependencies]
copperleaf.workspace = true
copperleaf-part-macro.workspace = true
