[package]
name = "copperleaf-backend-kicad"
version.workspace = true
edition.workspace = true
description = "KiCad netlist, schematic, and PCB emitters"
license.workspace = true

[dependencies]
copperleaf-core.workspace = true
copperleaf-ir.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
